SRP and God Class fixes